# vizzyscript

./: .gitignore  LICENSE  pyproject.toml
tests/: program.py  test_one.py
vizzy_api/: __init__.py  activation_groups.py  craft_instructions.py  operators.py  program_flow.py  triggers.py  types.py
vizzyscript/: __init__.py
vizzyscript/matchers/: __init__.py
vizzyscript/xml_gen/: __init__.py  common.py  expr.py  statements.py  top_level.py  triggers.py
