[project]
name = "vizzyscript"
version = "0.1.0"
description = "A transpiler for Vizzy from Juno New Origins (formerly SimpleRockets2)"
authors = [
    {name = "Saadi Save",email = "git.saadisave@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "vizzyscript" },
    { include = "vizzy_api" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
